--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "email-node",
-  "version": "1.0.0",
-  "dependencies": {
-    "express": "latest",
-    "nodemailer": "latest",
-    "nodemon": "^1.11.0"
-  }
+    "name": "bat-mailer"
+    , "version": "1.0.0"
+    , "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    }
+    , "author": "jane-doe"
+    , "license": "MIT"
+    , "dependencies": {
+        "express": "latest"
+        , "nodemailer": "latest"
+        , "nodemon": "^1.11.0"
+    }
+    , "engines": {
+        "node": "4.1.1"
+    }
 }
